applications/openeuler-meetingserver/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-meetingserver
  name: openeuler-meetingserver
