applications/openeuler-meetingserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: meetingserver-ingress
  namespace: openeuler-meetingserver
spec:
  rules:
  - host: meetings.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: meeting-service
          servicePort: 8080
        path: /        
  tls:
  - hosts:
    - meetings.openeuler.openatom.cn
    secretName: meetingserver-tls
